[package]
name = "dss_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dss_openapi = { path = "../dss_openapi" }

tokio = {version="1.21.2",features=["full"]}
reqwest={version="0.11.12"}
rumqttc = "0.17.0"
phf={version="0.11.1", features = ["macros"]}
slog="2.7.0"

