[package]
name = "dss_openapi"
version = "1.6.0"
authors = ["xgcssch@github.com"]
description = "dSS Server JSON Interface"
license = "Apache 2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
